made size of icons larger; fixed the 5th day icon not showing up

--- a/assets/style.css
+++ b/assets/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 i {
-    height: 400%;
+    font-size: 100px;
 }
 
 #wanderDogTitle {
